Mise à jour P7 Corrections: footer page error,et  collapse  200323

--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -44,7 +44,7 @@
 
 @media screen and  (min-width: 1500px) and (max-width: 2560px) {
      .kasa-apropos{
-          margin-bottom: 429px;
+          margin-bottom: 516px;
           .kasa-apropos_section1{
               left: 9%;
               width: 84%;
@@ -129,7 +129,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 40%;
+          margin-bottom: 52%;
          
           .kasa-apropos_section1{
                position: absolute;
@@ -169,7 +169,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 14%;
+          margin-bottom: 25%;
          
           .kasa-apropos_section1{
                position: absolute;
@@ -208,7 +208,7 @@
      .kasa-apropos{
           @include pageLengthmobile();
           width: 100%;
-          margin-bottom: 22%;
+          margin-bottom: 39%;
          
           .kasa-apropos_section1{
                position: absolute;
